--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -2,6 +2,7 @@ name: Latest blog post workflow
 on: 
     schedule:
         - cron: '0 * * * *'
+    workflow_dispatch:
 jobs: 
     update-readme-with-blog: 
         name: Update this repo's README with latest blog posts
@@ -11,4 +12,4 @@ jobs:
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
                 max_post_count: "4"
-                feed_list: "https://mrharrisonbarker.github.io/employme/feed.xml"
+                feed_list: "https://mrharrisonbarker.github.io/EmployMe/feed.xml"
